--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 
+
+/* HEADER */
+
+/* LOGIN REGISTER */
+
 .container-login, .container-register{
-    width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -80%);
-    padding: 20px;
+    max-width: 520px;
+    margin: 50px auto;
+    padding: 25px;
+    
 }
 
 
@@ -21,8 +24,7 @@
 }
 
 .container-register{
-    width: 750px;
-    transform: translate(-50%, -70%)
+    max-width: 780px;
 }
 
 /* Message  */
@@ -32,4 +34,16 @@
     opacity: 0;
     max-height: 0;
 
+}
+
+@media (max-width: 992px){
+    #navbarNav{
+        max-width: none;
+        z-index: 3;
+        position: relative;
+    }
+
+    .container-login, .container-register{
+        margin: 30px auto;
+    }
 }
