--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,26 @@
 .my-account .container-register{
     margin: 50px 0px !important;
 }
+
+/* Panel Sections */
+
+.buttons-add{
+    margin-top: 40px;
+}
+
+.container-sections{
+    margin: 30px 0px;
+}
+
+.container.sections h3{
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+.card.section{
+    margin: 15px;
+}
+
+@media (max-width:992px){
+    
+}
