--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,12 @@
 /* Message  */
 
 #register-message{
-    transition: 0.2s;
+    transition-property: height, opacity;
+    transition-duration: 0.2s;
     opacity: 0;
-    max-height: 0;
+    height: 0px;
+    padding: 0;
+ 
 
 }
 
@@ -75,4 +78,11 @@
 
 @media (max-width:992px){
     
+}
+
+/* Products */
+
+.info-section{
+    max-width: 650px;
+    margin: 0 auto;
 }
